tests/NormalTests/paczka1/fuzzy1/21641210.err
Error in line 11: QvofWwUmEU S274 11,9
Error in line 12: QvofWwUmEU A303 25,4
Error in line 25: 1cFhbnO S274 58,8
Error in line 27: 1cFhbnO A291 4,1
Error in line 33: S274 S324 57,2
Error in line 35: S274 A303 32,9
Error in line 38: S274 A291 38,4
